--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,15 @@ authors = ["Your Name <your.email@example.com>"]
 description = "A modern Rust reimplementation of the classic 1990s DOS game Moonbase"
 
 [dependencies]
-bevy = "0.12"  # Game engine
-serde = { version = "1.0", features = ["derive"] }  # Serialization
-serde_json = "1.0"  # JSON handling
-rand = "0.8"  # Random number generation
+bevy = { version = "0.12", features = ["default"] }
+bevy_egui = "0.24"  # For retro-style UI elements
+egui = "0.24"       # UI framework
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+rand = "0.8"
 
 [dev-dependencies]
-criterion = "0.5"  # Benchmarking
+criterion = "0.5"
 
 [profile.dev]
 opt-level = 1
